# irb1300_urdf

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_irb1300_urdf.yaml
launch/: display.launch.py  gazebo.launch.xml
meshes/: base_link.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
urdf/: 1300_urdf.csv  1300_urdf.urdf
