<?xml version="1.0"?>
<package format="3">
  <name>irb1300_urdf</name>
  <version>0.1.0</version>
  <description>ABB IRB 1300 robot kolunun URDF modelini içeren bir paket.</description>

  <maintainer email="karis@todo.todo">Seyit Ahmet Karış</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz</depend>
  <depend>gazebo_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

